--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
                         <div class="container">
                             <div class="row justify-content-center">
                                 <div class="col-lg-10 text-start">
-                                    <p class="fs-5 fw-medium text-primary text-uppercase animated slideInRight">25 Years of Working Experience</p>
-                                    <h1 class="display-1 text-white mb-5 animated slideInRight">Industrial Solution Providing Company</h1>
+                                    <p class="fs-5 fw-medium text-primary text-uppercase animated slideInRight">30 Years of Working Experience</p>
+                                    <h1 class="display-1 text-white mb-5 animated slideInRight">Hydrant Solution</h1>
                                     <a href="" class="btn btn-primary py-3 px-5 animated slideInRight">Explore More</a>
                                 </div>
                             </div>
@@ -117,8 +117,8 @@
                         <div class="container">
                             <div class="row justify-content-center">
                                 <div class="col-lg-10 text-start">
-                                    <p class="fs-5 fw-medium text-primary text-uppercase animated slideInRight">25 Years of Working Experience</p>
-                                    <h1 class="display-1 text-white mb-5 animated slideInRight">The Best Reliable Industry Solution</h1>
+                                    <p class="fs-5 fw-medium text-primary text-uppercase animated slideInRight">30 Years of Working Experience</p>
+                                    <h1 class="display-1 text-white mb-5 animated slideInRight">Fire Safety Solution</h1>
                                     <a href="" class="btn btn-primary py-3 px-5 animated slideInRight">Explore More</a>
                                 </div>
                             </div>
