--- a/feature.html
+++ b/feature.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Industro - Industrial HTML Template</title>
+    <title>G.M.Enterprises</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -54,7 +54,7 @@
             <div class="col-lg-6 text-end">
                 <div class="h-100 topbar-right d-inline-flex align-items-center text-white py-2 px-5">
                     <span class="fs-5 fw-bold me-2"><i class="fa fa-phone-alt me-2"></i>Call Us:</span>
-                    <span class="fs-5 fw-bold">+012 345 6789</span>
+                    <span class="fs-5 fw-bold">+91-9892691203</span>
                 </div>
             </div>
         </div>
@@ -65,7 +65,7 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top py-0 pe-5">
         <a href="index.html" class="navbar-brand ps-5 me-0">
-            <h1 class="text-white m-0">Industro</h1>
+            <h1 class="text-white m-0">G.M.Enterprises</h1>
         </a>
         <button type="button" class="navbar-toggler me-0" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -196,9 +196,10 @@
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-white mb-4">Our Office</h5>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Sector 2, Ulwe,Navi Mumbai, Maharashtra, 410206</p>
+					<p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>07/7A, Musa Killeder Marg, Ram Rahim Compound, Jacob Circle, Mumbai, 400011</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+91-9892691203</p>
+                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>gmfireenterprises@gmail.com</p>
                     <div class="d-flex pt-3">
                         <a class="btn btn-square btn-primary rounded-circle me-2" href=""><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-square btn-primary rounded-circle me-2" href=""><i class="fab fa-facebook-f"></i></a>
@@ -208,10 +209,12 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-white mb-4">Quick Links</h5>
-                    <a class="btn btn-link" href="">About Us</a>
+                    <a class="btn btn-link" href="https://maps.app.goo.gl/dJ6FhAAQwnUmDfKdA">About Us</a>
                     <a class="btn btn-link" href="">Contact Us</a>
                     <a class="btn btn-link" href="">Our Services</a>
                     <a class="btn btn-link" href="">Terms & Condition</a>
+					<a class="btn btn-link" href="https://maps.app.goo.gl/dJ6FhAAQwnUmDfKdA">Navi-Mumbai Office Google Map</a>
+					<a class="btn btn-link" href="https://maps.app.goo.gl/dJ6FhAAQwnUmDfKdA">Mumbai Office Google Map</a>
                     <a class="btn btn-link" href="">Support</a>
                 </div>
                 <div class="col-lg-3 col-md-6">
@@ -235,14 +238,16 @@
         </div>
     </div>
     <!-- Footer End -->
+	
+	
 
 
     <!-- Copyright Start -->
     <div class="container-fluid copyright bg-dark py-4">
         <div class="container text-center">
-            <p class="mb-2">Copyright &copy; <a class="fw-semi-bold" href="#">Your Site Name</a>, All Right Reserved.</p>
+            <p class="mb-2">Copyright &copy; <a class="fw-semi-bold" href="#">G.M. Enterprises</a>, All Right Reserved.</p>
             <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-            <p class="mb-0">Designed By <a class="fw-semi-bold" href="https://htmlcodex.com">HTML Codex</a></p>
+            <p class="mb-0">Designed By <a class="fw-semi-bold" href="https://gmfireenterprises.com/">Itransform Technology</a></p>
         </div>
     </div>
     <!-- Copyright End -->
