--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Industro - Industrial HTML Template</title>
+    <title>G.M.Enterprises</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -54,7 +54,7 @@
             <div class="col-lg-6 text-end">
                 <div class="h-100 topbar-right d-inline-flex align-items-center text-white py-2 px-5">
                     <span class="fs-5 fw-bold me-2"><i class="fa fa-phone-alt me-2"></i>Call Us:</span>
-                    <span class="fs-5 fw-bold">+012 345 6789</span>
+                    <span class="fs-5 fw-bold">+91-9892691203</span>
                 </div>
             </div>
         </div>
@@ -65,7 +65,7 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top py-0 pe-5">
         <a href="index.html" class="navbar-brand ps-5 me-0">
-            <h1 class="text-white m-0">Industro</h1>
+            <h1 class="text-white m-0">G.M.Enterprises</h1>
         </a>
         <button type="button" class="navbar-toggler me-0" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -80,9 +80,9 @@
                     <div class="dropdown-menu bg-light m-0">
                         <a href="project.html" class="dropdown-item">Projects</a>
                         <a href="feature.html" class="dropdown-item">Features</a>
-                        <a href="team.html" class="dropdown-item">Our Team</a>
-                        <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                        <a href="404.html" class="dropdown-item">404 Page</a>
+                        <a href="index.html" class="dropdown-item">Our Team</a>
+                        <a href="index.html" class="dropdown-item">Testimonial</a>
+                        <a href="index.html" class="dropdown-item">404 Page</a>
                     </div>
                 </div>
                 <a href="contact.html" class="nav-item nav-link active">Contact</a>
@@ -119,8 +119,8 @@
                             <i class="fa fa-phone-alt fa-2x text-primary"></i>
                         </div>
                         <h4 class="mb-3">Phone Number</h4>
-                        <p class="mb-2">+012 345 67890</p>
-                        <p class="mb-4">+012 345 67890</p>
+                        <p class="mb-2">+91-9892691203</p>
+                        <p class="mb-4">+91-9892691203</p>
                         <a class="btn btn-primary px-4" href="tel:+0123456789">Call Now <i class="fa fa-arrow-right ms-2"></i></a>
                     </div>
                 </div>
@@ -130,9 +130,9 @@
                             <i class="fa fa-envelope-open fa-2x text-primary"></i>
                         </div>
                         <h4 class="mb-3">Email Address</h4>
-                        <p class="mb-2">info@example.com</p>
-                        <p class="mb-4">support@example.com</p>
-                        <a class="btn btn-primary px-4" href="mailto:info@example.com">Email Now <i class="fa fa-arrow-right ms-2"></i></a>
+                        <p class="mb-2">gmfireenterprises@gmail.com</p>
+                        <p class="mb-4">gmengineerss@gmail.com</p>
+                        <a class="btn btn-primary px-4" href="mailto:gmfireenterprises@gmail.com">Email Now <i class="fa fa-arrow-right ms-2"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
@@ -141,19 +141,19 @@
                             <i class="fa fa-map-marker-alt fa-2x text-primary"></i>
                         </div>
                         <h4 class="mb-3">Office Address</h4>
-                        <p class="mb-2">+012 345 67890</p>
-                        <p class="mb-4">+012 345 67890</p>
-                        <a class="btn btn-primary px-4" href="https://goo.gl/maps/FsznshxgnULBGgkN9" target="blank">Direction <i class="fa fa-arrow-right ms-2"></i></a>
+                        <p class="mb-2">Sector 2, Ulwe,Navi Mumbai, Maharashtra, 410206</p>
+                        <p class="mb-4">07/7A, Musa Killeder Marg, Ram Rahim Compound, Jacob Circle, Mumbai, 400011</p>
+                        <a class="btn btn-primary px-4" href="https://maps.app.goo.gl/dJ6FhAAQwnUmDfKdA" target="blank">Direction <i class="fa fa-arrow-right ms-2"></i></a>
                     </div>
                 </div>
             </div>
             <div class="row mb-5">
                 <div class="col-12 wow fadeInUp" data-wow-delay="0.1s">
                     <iframe class="w-100"
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3001156.4288297426!2d-78.01371936852176!3d42.72876761954724!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4ccc4bf0f123a5a9%3A0xddcfc6c1de189567!2sNew%20York%2C%20USA!5e0!3m2!1sen!2sbd!4v1603794290143!5m2!1sen!2sbd"
-                    frameborder="0" style="min-height: 450px; border:0;" allowfullscreen="" aria-hidden="false"
-                    tabindex="0"></iframe>
+                    src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d943.2275601956368!2d72.828991!3d18.9795711!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7cf0331319ab5%3A0xe400428c7c91ab17!2sG.M.ENGINEERS%20Fire%20Services!5e0!3m2!1sen!2sin!4v1720808250137!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+</iframe>
                 </div>
+				
             </div>
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
@@ -168,7 +168,7 @@
                                 </div>
                                 <div class="ms-3">
                                     <h6>Call Us</h6>
-                                    <span>+012 345 67890</span>
+                                    <span>+91-9892619203</span>
                                 </div>
                             </div>
                         </div>
@@ -179,7 +179,8 @@
                                 </div>
                                 <div class="ms-3">
                                     <h6>Mail Us</h6>
-                                    <span>info@example.com</span>
+                                    <span>gmfireenterprises@gmail.com</span>
+									<span>gmengineerss@gmail.com</span>
                                 </div>
                             </div>
                         </div>
@@ -246,20 +247,22 @@
                     <a class="btn btn-link" href="">Contact Us</a>
                     <a class="btn btn-link" href="">Our Services</a>
                     <a class="btn btn-link" href="">Terms & Condition</a>
-                    <a class="btn btn-link" href="">Support</a>
+					<a class="btn btn-link" href="https://maps.app.goo.gl/dJ6FhAAQwnUmDfKdA">Navi-Mumbai Office Google Map</a>
+					<a class="btn btn-link" href="https://maps.app.goo.gl/dJ6FhAAQwnUmDfKdA">Mumbai Office Google Map</a>
+					<a class="btn btn-link" href="">Support</a>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-white mb-4">Business Hours</h5>
                     <p class="mb-1">Monday - Friday</p>
                     <h6 class="text-light">09:00 am - 07:00 pm</h6>
                     <p class="mb-1">Saturday</p>
-                    <h6 class="text-light">09:00 am - 12:00 pm</h6>
+                    <h6 class="text-light">09:00 am - 07:00 pm</h6>
                     <p class="mb-1">Sunday</p>
                     <h6 class="text-light">Closed</h6>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-white mb-4">Newsletter</h5>
-                    <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
+                    <p>Enter Use Email.</p>
                     <div class="position-relative w-100">
                         <input class="form-control bg-transparent w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
                         <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
