--- a/index.html
+++ b/index.html
@@ -180,11 +180,11 @@
                             <h5 class="text-white">Experience</h5>
                         </div>
                         <div class="ms-4">
-                            <p><i class="fa fa-check text-primary me-2"></i>Power & Energy</p>
-                            <p><i class="fa fa-check text-primary me-2"></i>Civil Engineering</p>
-                            <p><i class="fa fa-check text-primary me-2"></i>Chemical Engineering</p>
-                            <p><i class="fa fa-check text-primary me-2"></i>Mechanical Engineering</p>
-                            <p class="mb-0"><i class="fa fa-check text-primary me-2"></i>Oil & Gas Engineering</p>
+                            <p><i class="fa fa-check text-primary me-2"></i>Fire Extinguisher</p>
+                            <p><i class="fa fa-check text-primary me-2"></i>Hydrant System</p>
+                            <p><i class="fa fa-check text-primary me-2"></i>Fire Alarm System</p>
+                            <p><i class="fa fa-check text-primary me-2"></i>CCTV Solutions</p>
+                            <p class="mb-0"><i class="fa fa-check text-primary me-2"></i>Industrial Safety Equipment Suppply</p>
                         </div>
                     </div>
 
